# Rust_Task_API_Flutter_App

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 001_create_tasks_table.sql
src/: handlers.rs  main.rs  models.rs
